# ccplugin

./: .coverage  .editorconfig  .gitignore  .mcp.json  .version  AGENTS.md  CHANGELOG.md  CLAUDE.md  DIAGNOSTIC.md  LICENSE  README.md  SECURITY.md  SEMANTIC_OPTIMIZATION_PLAN.md  VOICE_SUPPORT.md  coverage.json  delete_file_approval_demo.py  delete_file_with_approval.py  deletion_approval_demo_log.json  fix_hitl_demo.py  marketplace.json  orphan-modules-audit-report.md  pyproject.toml  skills-lock.json  test_semantic_init.py
lib/: README.md  __init__.py  llms.txt  pyproject.toml
lib/constants/: __init__.py  language_constants.py
lib/database/: __init__.py  indexer.py
lib/db/: __init__.py  core.py  models.py  schema.py
lib/db/adapters/: __init__.py  base.py  mysql.py  postgresql.py  sqlite.py
lib/embedding/: __init__.py  storage.py  text_search.py
lib/hooks/: hook.py  pre_tool_use.py
lib/logging/: README.md  __init__.py  handler.py  logger.py  manager.py  setup_utils.py
lib/mcp/: __init__.py
lib/notify/: __init__.py  config.py  hooks.py  i18n.py  init_config.py  mcp_server.py  notification.py  notification_hook.py  notifier.py  posttooluse_hook.py  precompact_hook.py  pretooluse_hook.py  simple_hook.py  tts.py  voice.py
lib/parsers/: __init__.py  flutter_parser.py  java_parser.py  simple_parser.py
lib/search/: integrated.py
lib/semantic/: agent_prompt.py
lib/task/: __init__.py  mcp_server.py
lib/tests/: README.md  conftest.py  test_db.py  test_db_mysql_integration.py  test_db_mysql_unit.py  test_db_postgresql_integration.py  test_db_postgresql_unit.py  test_logging.py  test_notify.py  test_utils.py
lib/utils/: __init__.py  constants.py  env.py  file.py  format.py  gitignore.py  help.py  helpers.py  hybrid_indexer.py  os.py  update_version.py  version.py
plugins/code/golang/: AGENT.md  README.md  pyproject.toml
plugins/code/naming/: AGENT.md  README.md  __init__.py  pyproject.toml
plugins/code/python/: AGENT.md  README.md  __init__.py  pyproject.toml
plugins/code/typescript/: AGENT.md  pyproject.toml
plugins/code/version/: pyproject.toml
plugins/code/vue/: README.md  __init__.py  pyproject.toml
plugins/context/: README.md  pyproject.toml
plugins/context/.claude-plugin/: plugin.json
plugins/context/docs/: 工具参考.md  快速开始.md
plugins/env/: AGENT.md  README.md  pyproject.toml
plugins/env/.claude-plugin/: plugin.json
plugins/env/hooks/: hooks.json
plugins/env/scripts/: __init__.py  hooks.py  llms.txt  main.py
plugins/knowledge/: README.md  pyproject.toml
plugins/knowledge/.claude-plugin/: plugin.json
plugins/knowledge/docs/: 工具参考.md  快速开始.md
plugins/languages/flutter/: .lsp.json  AGENT.md  GUIDELINES.md  README.md  llms.txt  pyproject.toml
plugins/languages/markdown/: .lsp.json  AGENT.md  GUIDELINES.md  README.md  llms.txt  pyproject.toml
plugins/languages/naming/: AGENT.md  GUIDELINES.md  README.md  llms.txt  pyproject.toml
plugins/llms/: AGENT.md  GUIDELINES.md  README.md  llms.txt  pyproject.toml
plugins/llms/.claude-plugin/: plugin.json
plugins/llms/agents/: llms-generator.md  llms-validator.md
plugins/llms/docs/: agents.md  configuration.md  index.md  standard.md
plugins/llms/hooks/: hooks.json
plugins/llms/scripts/: hooks.py  llms.txt  main.py
plugins/memory/: .coverage  .gitignore  README.md  llms.txt  pyproject.toml
plugins/memory/.claude-plugin/: plugin.json
plugins/memory/docs/: CLI命令设计.md  Hooks系统设计.md  MCP工具设计.md  architecture.md  commands.md  hooks.md  index.md  uri.md  工具参考.md  快速开始.md  数据库设计.md  架构设计.md  概述.md  记忆系统设计.md  部署指南.md  高级特性设计.md
plugins/memory/scripts/: hooks.py  llms.txt  main.py  mcps.py  memory.py
plugins/memory/tests/: __init__.py  conftest.py  test_advanced.py  test_api.py  test_api_errors.py  test_crud.py  test_crud_extra.py  test_database.py  test_error.py  test_error_extra.py  test_hooks.py  test_import_export.py  test_import_export_extra.py  test_lifecycle.py  test_main.py  test_mcp.py  test_models.py  test_path.py  test_plugin_manifest.py  test_relation.py  test_relation_extra.py  test_search.py  test_search_extra.py  test_server.py  test_server_extra.py  test_session.py  test_stats.py  test_stats_extra.py  test_stats_lines.py  test_system.py  test_version.py  test_version_extra.py
plugins/notify/: .mcp.json  README.md  __init__.py  hooks.example.yaml  llms.txt  pyproject.toml
plugins/notify/.claude-plugin/: plugin.json
plugins/notify/hooks/: hooks.json
plugins/notify/scripts/: __init__.py  config.py  hooks.py  icons.py  main.py  mcp_server.py  notification_hook.py  notifier.py  notify.py  posttooluse_hook.py  precompact_hook.py  pretooluse_hook.py  sessionend_hook.py  sessionstart_hook.py  stop_hook.py  subagentstop_hook.py  test_config.py  test_hooks.py  test_notify.py  userpromptsubmit_hook.py
plugins/office/docx/: .mcp.json  README.md  llms.txt  pyproject.toml
plugins/office/pdf/: README.md  llms.txt  pyproject.toml
plugins/office/pptx/: .mcp.json  README.md  llms.txt  pyproject.toml
plugins/office/xlsx/: .mcp.json  README.md  llms.txt  pyproject.toml
plugins/semantic/: .mcp.json  AGENT.md  PHASE2_COMPLETION_SUMMARY.md  README.md  pyproject.toml
plugins/semantic/.claude/: settings.json
plugins/semantic/.claude-plugin/: plugin.json
plugins/semantic/.lazygophers/: .gitignore
plugins/semantic/agents/: semantic.md
plugins/semantic/commands/: semantic-search.md
plugins/semantic/docs/: configuration-guide.md  new-languages-guide.md  supported-languages.md
plugins/semantic/hooks/: hooks.json
plugins/semantic/scripts/: PHASE2_INTEGRATION.md  __init__.py  diagnose.py  mcp_server.py  semantic.py  test_all_languages.py  test_config.py  test_extended_languages.py  test_new_languages.py
plugins/task/: .gitignore  .mcp.json  AGENT.md  CHANGELOG.md  README.md  __init__.py  alembic.ini  llms.txt  mypy.ini  pyproject.toml
plugins/task/.claude-plugin/: plugin.json
plugins/task/agents/: task-decomposer.md  (+2 more)
plugins/template/: .gitignore  .mcp.json  README.md  llms.txt  pyproject.toml
plugins/version/: .mcp.json  README.md  pyproject.toml
(+4609 files in other folders)
