[project]
name = "ccplugin"
version = "0.0.109"
description = "CCPlugin Market - Claude Code 插件市场"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [ "click>=8.1.0", "rich>=13.9.0", "toml>=0.10.2", "wraps>=0.15.0", "pyyaml>=6.0", "TTS>=0.22.0", "lib", "transformers==4.44.0",]

[build-system]
requires = [ "setuptools>=68.0", "wheel",]
build-backend = "setuptools.build_meta"

[project.scripts]
clean = "scripts.clean:main"
update = "scripts.update:main"
info = "scripts.info:main"
notify = "scripts.notify:main"

[project.optional-dependencies]
dev = [ "pytest>=7.0.0",]

[tool.setuptools.package-data]
"*" = [ "*.json", "*.md",]

[tool.setuptools.packages.find]
where = [ ".",]
include = [ "scripts*",]
exclude = [ "plugins*", "lib*",]

[tool.uv.sources.lib]
git = "https://github.com/lazygophers/ccplugin"
subdirectory = "lib"
rev = "master"
