[project]
name = "ccplugin"
version = "0.0.193"
description = "CCPlugin Market - Claude Code 插件市场"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
	"click>=8.1.0",
	"rich>=13.9.0",
	"pyyaml>=6.0",
	"lib",
	"tomlkit>=0.14.0",
	"mistune>=3.2.0",
	"typer>=0.24.1",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
clean = "scripts.clean:main"
update = "scripts.update:main"
info = "scripts.info:main"
check = "scripts.check:main"
install = "scripts.install:main"
md2html = "scripts.md2html:app"

[project.optional-dependencies]
dev = ["pytest>=7.0.0"]
tts = ["TTS>=0.22.0"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.md"]

[tool.setuptools.packages.find]
where = ["."]
include = ["scripts*"]
exclude = ["plugins*", "lib*"]

[tool.uv.sources.lib]
git = "https://github.com/lazygophers/ccplugin"
subdirectory = "lib"
rev = "master"