[project]
name = "lib"
version = "0.0.114"
description = "Shared library for ccplugin - logging, utilities, and notification"
requires-python = ">=3.11"
dependencies = ["click>=8.3.1", "pydantic>=2.12.5", "rich>=13.0.0", "pyyaml>=6.0", ]

[build-system]
requires = ["setuptools>=68.0", "wheel", ]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = ["pytest>=7.0.0", ]
tts = ["TTS>=0.22.0", ]

[tool.setuptools.packages.find]
where = ["..", ]
include = ["lib", "lib.*", ]