[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-plugin-context"
version = "0.1.0"
description = "Context Plugin for Claude Code - 会话上下文管理"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "luoxin", email = "luoxin@example.com"}
]
requires-python = ">=3.10"

dependencies = [
    "mcp>=1.1.0",
    "pydantic>=2.0",
    "sqlalchemy>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "black>=23.0",
]

[project.urls]
Homepage = "https://github.com/lazygophers/ccplugin/tree/main/plugins/context"
Repository = "https://github.com/lazygophers/ccplugin.git"

[tool.setuptools]
packages = ["context"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
