[project]
name = "ccplugin-env"
version = "0.0.107"
description = "Environment handling plugin for Claude Code"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [ "click>=8.1.0", "lib",]

[build-system]
requires = [ "setuptools>=68.0", "wheel",]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [ "pytest>=7.0.0",]

[tool.setuptools.package-data]
"*" = [ "*.py", "*.json", "*.md",]

[tool.setuptools.packages.find]
where = [ ".",]
include = [ "scripts*",]

[tool.uv.sources.lib]
git = "https://github.com/lazygophers/ccplugin"
subdirectory = "lib"
rev = "master"
