[project]
name = "plugin-llms"
version = "0.0.92"
description = "LLMS.txt 标准插件 - 通过 Agent 自动生成符合 llms.txt 规范的文件"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [ "click>=8.1.0", "rich>=13.9.0",]

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project.license]
text = "AGPL-3.0-or-later"

[project.scripts]
llms-hooks = "plugins.llms.scripts.main:main"
