[project]
name = "llms"
version = "0.1.0"
description = "llms.txt 标准插件 - 通过 Agent 自动生成符合 llms.txt 规范的文件"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.license]
text = "AGPL-3.0-or-later"

[project.optional-dependencies]
dev = ["pytest>=7.0.0"]

[tool.setuptools.package-data]
"*" = ["*.py", "*.json", "*.md"]

[tool.setuptools.packages.find]
where = ["."]
include = ["agents*", "skills*"]
