[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-plugin-memory"
version = "0.1.0"
description = "Memory Plugin for Claude Code - 基于知识图谱的记忆管理"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "luoxin", email = "luoxin@example.com"}
]
requires-python = ">=3.10"

dependencies = [
    "mcp>=1.1.0",
    "pydantic>=2.0",
    "networkx>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "black>=23.0",
]

test = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://github.com/lazygophers/ccplugin/tree/main/plugins/memory"
Repository = "https://github.com/lazygophers/ccplugin.git"
Issues = "https://github.com/lazygophers/ccplugin/issues"

[tool.setuptools]
packages = ["memory"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "W", "I", "N"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=src/memory --cov-report=term-missing"
