[project]
name = "code-memory"
version = "0.0.128"
description = "Claude Code plugin for intelligent memory management"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["click>=8.3.1", "lib", "aiosqlite>=0.19.0", "fastapi>=0.109.0", "uvicorn>=0.27.0", "pydantic>=2.0.0", "mcp>=1.0.0", "rich-click>=1.0.0"]

[build-system]
requires = ["setuptools>=68.0", "setuptools-scm[toml]>=7.0"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "pytest-asyncio>=0.21.0", "pytest-cov>=4.0.0", "httpx>=0.25.0"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.package-data]
"*" = ["*.py", "*.json", "*.md"]

[tool.setuptools.packages.find]
where = ["scripts"]
include = ["memory*", "web*"]

[tool.uv.sources.lib]
git = "https://github.com/lazygophers/ccplugin"
subdirectory = "lib"
rev = "master"
