[project]
name = "notify"
version = "0.0.50"
description = "Claude Code system notification plugin with hook support"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
	"lib",
	"pyyaml>=6.0.3",
	"typer>=0.12.0",
]

[build-system]
requires = ["setuptools>=68.0", "wheel", ]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = ["pytest>=7.0.0", ]

[tool.setuptools.package-data]
"*" = ["*.py", "*.json", "*.md", ]

[tool.setuptools.packages.find]
where = [".", ]
include = ["notify*", ]

[tool.uv.sources.lib]
git = "https://github.com/lazygophers/ccplugin"
subdirectory = "lib"
rev = "master"