[project]
name = "ccplugin-task"
version = "0.0.1"
description = "Claude Code file-system based task management plugin"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[build-system]
requires = ["setuptools>=68.0", "setuptools-scm[toml]>=7.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["task*"]

[tool.setuptools.package-data]
"*" = ["*.py", "*.json", "*.md"]
