[project]
name = "version"
version = "0.0.49"
description = "Claude Code version management plugin for semantic versioning"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [ "lib", "typer>=0.12.0",]

[build-system]
requires = [ "setuptools>=68.0", "wheel",]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [ "pytest>=7.0.0",]

[tool.setuptools.package-data]
"*" = [ "*.py", "*.json", "*.md",]

[tool.setuptools.packages.find]
where = [ ".",]
include = [ "version*",]

[tool.uv.sources.lib]
git = "https://github.com/lazygophers/ccplugin"
subdirectory = "lib"
rev = "master"
