[project]
name = "version"
version = "0.0.64"
description = "Claude Code version management plugin for semantic versioning"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [ "pydantic>=2.12.5", "rich>=14.2.0", "click>=8.1.0",]

[build-system]
requires = [ "setuptools>=68.0", "wheel",]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [ "pytest>=7.0.0",]

[tool.setuptools.package-data]
"*" = [ "*.py", "*.json", "*.md",]

[tool.setuptools.packages.find]
where = [ ".",]
include = [ "version*",]
