[project]
name = "ccplugin-code-golang"
version = "0.0.1"
description = "Claude Code plugin for Go language support"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[build-system]
requires = ["setuptools>=68.0", "setuptools-scm[toml]>=7.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["golang*"]

[tool.setuptools.package-data]
"*" = ["*.py", "*.json", "*.md"]
