[project]
name = "code-naming"
version = "0.0.78"
description = "Claude Code plugin for cross-language naming conventions"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [ "lib",]

[build-system]
requires = [ "setuptools>=68.0", "setuptools-scm[toml]>=7.0",]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [ "pytest>=7.0.0",]

[tool.setuptools.package-data]
"*" = [ "*.py", "*.json", "*.md",]

[tool.setuptools.packages.find]
where = [ ".",]
include = [ "naming*",]

[tool.uv.sources.lib]
git = "https://github.com/lazygophers/ccplugin"
subdirectory = "lib"
rev = "master"
