[project]
name = "ccplugin-code-python"
version = "0.0.71"
description = "Claude Code plugin for Python language support"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = [ "setuptools>=68.0", "setuptools-scm[toml]>=7.0",]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [ "pytest>=7.0.0",]

[tool.setuptools.package-data]
"*" = [ "*.py", "*.json", "*.md",]

[tool.setuptools.packages.find]
where = [ ".",]
include = [ "python*",]
