[project]
name = "code-naming"
version = "0.0.131"
description = "Claude Code plugin for cross-language naming conventions"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [ "lib", "rich>=14.3.1", "click>=8.1.0",]

[build-system]
requires = [ "setuptools>=68.0", "setuptools-scm[toml]>=7.0",]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [ "pytest>=7.0.0",]

[tool.setuptools.package-data]
"*" = [ "*.py", "*.json", "*.md",]

[tool.setuptools.packages.find]
where = [ ".",]
include = [ "naming*",]

[tool.uv.sources.lib]
git = "https://github.com/lazygophers/ccplugin"
subdirectory = "lib"
rev = "master"
