[project]
name = "office-pptx"
version = "0.0.137"
description = "Office PowerPoint plugin - pptx read/write and slide operations"
requires-python = ">=3.11"
dependencies = [ "python-pptx>=0.6.23", "mcp>=1.0.0",]

[build-system]
requires = [ "setuptools>=68.0", "wheel",]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = [ "..",]
include = [ "office_pptx", "office_pptx.*",]
