[project]
name = "theme-style-gradient"
version = "0.0.1"
description = "Claude Code plugin for Gradient design style"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [ "click>=8.3.1", "lib",]

[build-system]
requires = [ "setuptools>=68.0", "setuptools-scm[toml]>=7.0",]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [ "pytest>=7.0.0",]

[tool.setuptools.package-data]
"*" = [ "*.py", "*.json", "*.md",]

[tool.setuptools.packages.find]
where = [ ".",]
include = [ "style-gradient*",]

[tool.uv.sources.lib]
git = "https://github.com/lazygophers/ccplugin"
subdirectory = "lib"
rev = "master"
