[project]
name = "ccplugin-semantic"
version = "0.0.100"
description = "Claude Code semantic search plugin with code indexing and analysis capabilities"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [ "lib", "pydantic>=2.12.5", "typer>=0.21.1", "rich>=13.9.0", "lancedb>=0.26.0,<0.27.0", "pyarrow>=14.0.0", "fastembed>=0.3.0", "pathspec>=0.12.0", "pyyaml>=6.0.0", "sentence-transformers>=3.3.0", "torch>=2.5.0", "tree-sitter-language-pack>=0.9.1", "javalang>=0.13.0",]

[build-system]
requires = [ "setuptools>=68.0", "setuptools-scm[toml]>=7.0",]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [ "pytest>=7.0.0", "pytest-asyncio>=0.21.0",]
gpu = [ "fastembed-gpu>=0.3.0; platform_system == 'Linux' or platform_system == 'Windows'",]

[tool.setuptools.package-data]
"*" = [ "*.py", "*.json", "*.md",]

[tool.setuptools.packages.find]
where = [ ".",]
include = [ "semantic*",]

[tool.uv.sources.lib]
git = "https://github.com/lazygophers/ccplugin"
subdirectory = "lib"
rev = "master"
