[project]
name = "task"
version = "0.0.177"
description = "Claude Code task management plugin with CLI tools"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.0",
    "lib",
    "markdown-it-py>=4.0.0",
    "pygments>=2.17.0",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = ["pytest>=7.0.0"]

[tool.setuptools.package-data]
"*" = ["*.py", "*.json", "*.md"]

[tool.setuptools.packages.find]
where = ["."]
include = ["scripts*"]

[tool.uv.sources.lib]
git = "https://github.com/lazygophers/ccplugin"
subdirectory = "lib"
rev = "master"
