[project]
name = "task"
version = "0.0.193"
description = "Task 任务管理插件 - 提供任务规划、执行、验证和迭代的完整生命周期管理"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
 "lib",
]

[project.optional-dependencies]
dev = [
 "claude-agent-sdk",
 "pytest-asyncio",
]
all = [
 "task[dev]",
]

[build-system]
requires = [ "setuptools>=68.0", "wheel",]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
"*" = [ "*.py", "*.json", "*.md",]

[tool.setuptools.packages.find]
where = [ ".",]
include = [ "task*",]

[tool.uv.sources.lib]
git = "https://github.com/lazygophers/ccplugin"
subdirectory = "lib"
rev = "master"
